Hotfix for the startup crash in 1.5.1