@@ -22,7 +22,7 @@ plugins {
 }
 apply plugin: 'net.cazzar.gradle.modsio'
 
-version = "1.5.2"
+version = "1.5.3"
 group = "the_fireplace.grandeconomy"
 archivesBaseName = "GrandEconomy-1.15.2"
 
